# GitFor1C

./: .gitattributes  .gitignore  CMakeLists.txt  Compile.bat  Example.xml  GitFor1C.sln  MakePack.os  README.md  appveyor.ps1  appveyor.yml  test.css  test.htm  version.h
Example/: filename
Example/Forms/: Clone.xml  Form.xml  History.xml  Settings.xml  Sign.xml  Test.xml  Форма.xml
Example/Forms/Clone/Ext/: Form.xml
Example/Forms/Clone/Ext/Form/: Module.bsl
Example/Forms/Form/Ext/: Form.xml
Example/Forms/Form/Ext/Form/: Module.bsl
Example/Forms/History/Ext/: Form.xml
Example/Forms/History/Ext/Form/: Module.bsl
Example/Forms/Settings/Ext/: Form.xml
Example/Forms/Settings/Ext/Form/: Module.bsl
Example/Forms/Sign/Ext/: Form.xml
Example/Forms/Sign/Ext/Form/: Module.bsl
Example/Forms/Test/Ext/: Form.xml
Example/Forms/Test/Ext/Form/: Module.bsl
Example/Forms/Форма/Ext/: Form.xml
Example/Forms/Форма/Ext/Form/: Module.bsl
Example/Templates/: GitFor1C.xml  VAEditor.xml
include/: AddInDefBase.h  ComponentBase.h
lib/: packages.json  packages.ps1
src/: AddInBase.cpp  AddInBase.h  AddInNative.aps  AddInNative.vcxproj  AddInNative.vcxproj.filters  FileFinder.cpp  GitControl.cpp  GitControl.h  GitManager.cpp  GitManager.h  cpp.hint  stdafx.cpp  stdafx.h  version.h
tools/: MakePack.os
